--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <body>
       <header>
          <h1 id="name">Alle Zayd Abusaman</h1>
-         <img src="profile.jpg" alt="Profile Picture" id="profile-img">
+         <img src="formal picture.jpg" alt="Profile Picture" id="profile-img">
          <p id="course-year">Computer Science - 2nd Year</p>
          <button id="theme-toggle">Switch Theme</button>
       </header>
