--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
    <body>
       <header>
          <h1 id="name">Alle Zayd Abusaman</h1>
+         <p id="tagline">Aspiring Web Developer & Software Enthusiast</p>
          <img src="formal picture.jpg" alt="Profile Picture" id="profile-img">
          <p id="course-year">Computer Science - 2nd Year</p>
          <button id="theme-toggle">Switch Theme</button>
       </header>
+      
       <section id="achievements">
          <h2>Achievements/Certifications</h2>
          <ul>
@@ -20,6 +22,7 @@
             <li>Passed all major subjects</li>
          </ul>
       </section>
+      
       <section id="projects">
          <h2>Previous Projects</h2>
          <ul>
