Add section for Formative 2 Landing Page link

--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
             <li>Borrowing System</li>
          </ul>
       </section>
+      <section id Case-Study-link>
+         <h2>
+            Formative 2 Landing Page Link
+         </h2>
+         <p>
+            It's a first experience in making web pages and I learned a few things. 
+         </p>
+         <a href="https://alle-zayd.github.io/StrokeSense/">This is the link for the Landing Page</a>
+      </section>
       <script src="script.js"></script>
    </body>
 </html>
