Fix HTML syntax for Case-Study-link section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <li>Borrowing System</li>
          </ul>
       </section>
-      <section id Case-Study-link>
+      <section id="Case-Study-link">
          <h2>
             Formative 2 Landing Page Link
          </h2>
