Add Machine Problem section with link in index.html

--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
          </p>
          <a href="https://alle-zayd.github.io/StrokeSense/">This is the link for the Landing Page</a>
       </section>
+      <section id="MachineProblem">
+         <h2>
+            Formative 2 Machine Problem Link
+         </h2>
+         <a href ="https://alle-zayd.github.io/Machine-Problem/">Link for the Activity</a>
+      </section>
       <script src="script.js"></script>
    </body>
 </html>
